# sphinx-lint

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  directivegetter.py  download-more-tests.sh  populate-xpass.sh  pyproject.toml  rstlint.py  setup.cfg  sphinx-lint.1  sphinxlint.py  tox.ini
.github/workflows/: deploy.yml  gh-action-issue-test.yml  lint.yml  tests.yml
sphinxlint/: __init__.py  __main__.py  checkers.py  cli.py  config.py  directivegetter.py  rst.py  sphinxlint.py  utils.py
tests/: conftest.py  test_default_role_re.py  test_enable_disable.py  test_filter.py  test_filter_out_literal.py  test_friends.py  test_nonregression.py  test_po2rst.py  test_py2rst.py  test_rst.py  test_rstlint.py  test_sphinxlint.py  test_xpass_friends.py
tests/fixtures/: paragraphs.rst
tests/fixtures/triggers-false-positive/: triple-backticks.rst
tests/fixtures/xfail/: backslash-space.rst  bad-dedent-in-code-block.rst  bad-directive.rst  bang-tilde.rst  code-sample-glued-with-plural.rst  dangling-hyphen.rst  default-role-between-brackets.rst  default-role-can-end-with-backslash.rst  default-role-double-quoted.rst  default-role-glued.rst  default-role-hidden-in-function.rst  default-role-in-c-type.rst  default-role-in-tables.rst  default-role-no-alpha.rst  default-role-parenthesed.rst  default-role-quote.rst  default-role-separated-by-commas.rst  default-role.rst  directive-missing-space.rst  docstring.py  download-hyperlink-unnecessary-underscore.rst  error-hidden-in-note.rst  excessive-indentation.rst  hyperlink-anonymous-reference-missing-space.rst  hyperlink-missing-backtick.rst  hyperlink-missing-space.rst  hyperlink-missing-underscore-and-space.rst  hyperlink-missing-underscore-split-in-two-lines.rst  hyperlink-missing-underscore.rst  hyperlinks-several.rst  missing-backtick-after-role-after-table.rst  missing-backtick-on-role.rst  missing-colon-1.rst  missing-colon-2.rst  missing-colon.rst  missing-column.rst  missing-newline-at-end-of-file.rst  missing-right-role-colon.rst  missing-right-role-column.rst  missing-space-1.rst  (+18 more)
tests/fixtures/xpass/: backslash-space.rst  class-docstring-containing-valid-rst.py  code-sample-not-glued-with-plural.rst  colon-all-colon-in-inline-literal.rst  column-in-inline-literal.rst  dangling-hyphen.rst  default-role-escaped.rst  directive-no-arguments.rst  docstrings-containing-plain-text.py  download-directive-with-url.rst  excessive-indentation.rst  fixed-bad-directive.rst  fixed-missing-column.rst  fixed-missing-space.rst  hyperlink-reference-followed-by-role.rst  inline-internal-targets.rst  inline-literal-containing-newline.rst  inline-literal-inside-role.rst  inline-literals-in-tables.rst  link-in-literal.rst  link-with-no-title.rst  long-inline-link.rst  multiline-inline-literal.rst  multiline-links-in-table.rst  multiline-role-in-table.rst  multiple-inline-literals.rst  no_missing_space_after_literal.rst  not-a-default-role-in-comment.rst  ref-in-samp.rst  role-in-code-sample.rst  role-in-inline-literal.rst  role-in-table.rst  role-inside-inline-literal.rst  role-inside-literal-role.rst  role-tags-in-inline-literals.rst  roles-may-not-be-hardcoded.rst  rst-in-code-blocks.rst  sections.rst  should-not-trigger-trailing-whistespace.rst  splitted-role-in-a-table.rst  (+4 more)
