[metadata]
name = sphinx-lint
version = attr: sphinxlint.__version__
description = Check for stylistic and formal issues in .rst and .py files included in the documentation.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/sphinx-contrib/sphinx-lint
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Topic :: Documentation :: Sphinx
  Intended Audience :: Developers
  License :: OSI Approved :: Python Software Foundation License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
py_modules = sphinxlint
python_requires = >= 3.7
install_requires =
    polib

[options.entry_points]
console_scripts = sphinx-lint=sphinxlint:main
